--- a/app/views/_search_results.html
+++ b/app/views/_search_results.html
@@ -1,28 +1,37 @@
-<hr>
+<hr />
 
 <div class="panel panel-default search-results">
-  <div class="panel-heading">
-    <h3 class="panel-title">Search Results</h3>
+  <div class="panel-heading clearfix">
+    <h3 class="panel-title pull-left">Search Results</h3>
+    <% if (zip) { %>
+    <a href="<%= zip %>" class="btn btn-primary pull-right">Download</a>
+    <% } else { %>
+    <a
+      href="/zip?tags=<%= tagsParameter %>&tagmode=<%= tagmodeParameter %>"
+      class="btn btn-primary pull-right"
+      >Zip</a
+    >
+    <% } %>
   </div>
   <div class="panel-body">
-
     <% if (photos.length) { %>
 
-      <ul>
-        <% photos.forEach(function (photo) { %>
-          <li class="list-unstyled">
-            <a href="<%= photo.media.b %>" class="thumbnail">
-              <img src="<%= photo.media.t %>" alt="Photo - <%= photo.title %>"
-                title="<%= photo.title %>">
-            </a>
-          </li>
-        <% }) %>
-      </ul>
+    <ul>
+      <% photos.forEach(function (photo) { %>
+      <li class="list-unstyled">
+        <a href="<%= photo.media.b %>" class="thumbnail">
+          <img
+            src="<%= photo.media.t %>"
+            alt="Photo - <%= photo.title %>"
+            title="<%= photo.title %>"
+          />
+        </a>
+      </li>
+      <% }) %>
+    </ul>
 
     <% } else { %>
-      <div class="alert alert-info"><strong>No results</strong></div>
+    <div class="alert alert-info"><strong>No results</strong></div>
     <% } %>
-
   </div>
-
 </div>
